# Captura

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  commands.rs  history.rs  lib.rs  main.rs  settings.rs  temp.rs  tray.rs
src/components/: ColorPicker.tsx  FloatingToolbar.tsx  Toolbar.tsx
src/store/: useAppStore.ts
src/styles/: global.css
src/types/: index.ts
src/utils/: uuid.ts
src/windows/: CaptureOverlay.tsx  Editor.tsx  History.tsx  Settings.tsx
